k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: province-service
  namespace: province
  labels:
    app.kubernetes.io/name: province-service
spec:
  selector:
    app.kubernetes.io/name: province-service
  ports:
    - name: http
      port: 8080
      targetPort: http
